fix spacing-unit / warnings, update organizers

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -31,7 +31,7 @@
 .site-nav {
   position: absolute;
   top: 9px;
-  right: $spacing-unit / 2;
+  right: $spacing-unit * 0.5;
   background-color: $background-color;
   border: 1px solid $border-color-01;
   border-radius: 5px;
@@ -120,8 +120,8 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  padding-top: $spacing-unit / 2;
-  padding-bottom: $spacing-unit / 2;
+  padding-top: $spacing-unit * 0.5;
+  padding-bottom: $spacing-unit * 0.5;
 }
 
 
@@ -136,7 +136,7 @@
 
 .footer-heading {
   @include relative-font-size(1.125);
-  margin-bottom: $spacing-unit / 2;
+  margin-bottom: $spacing-unit * 0.5;
 }
 
 .feed-subscribe .svg-icon {
@@ -156,7 +156,7 @@
 }
 
 .footer-col {
-  margin-bottom: $spacing-unit / 2;
+  margin-bottom: $spacing-unit * 0.5;
 }
 
 .footer-col-1,
@@ -189,16 +189,16 @@
 
   .footer-col {
     width: calc(100% - (#{$spacing-unit} / 2));
-    padding: 0 ($spacing-unit / 2);
+    padding: 0 ($spacing-unit * 0.5);
 
     &:first-child {
-      padding-right: $spacing-unit / 2;
+      padding-right: $spacing-unit * 0.5;
       padding-left: 0;
     }
 
     &:last-child {
       padding-right: 0;
-      padding-left: $spacing-unit / 2;
+      padding-left: $spacing-unit * 0.5;
     }
   }
 }
@@ -304,7 +304,7 @@
     &:last-of-type { margin-right: 0 }
     a {
       display: block;
-      padding: $spacing-unit / 4;
+      padding: $spacing-unit * 0.25;
       border: 1px solid $border-color-01;
       &:hover { border-color: $border-color-02 }
     }
@@ -327,7 +327,7 @@
     }
     div {
       display: block;
-      padding: $spacing-unit / 4;
+      padding: $spacing-unit * 0.25;
       border: 1px solid transparent;
 
       &.pager-edge {
